--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,26 @@
 {
   "name": "KLYX Player",
   "short_name": "KLYX",
-  "start_url": "/dashboard",
+  "start_url": "./dashboard.html",
   "display": "fullscreen",
-  "background_color": "#0f0f0f",
-  "theme_color": "#0f0f0f",
-  "orientation": "portrait",
+  "background_color": "#0b0e14",
+  "theme_color": "#0b0e14",
+  "orientation": "any",
   "icons": [
     {
-      "src": "/assets/logos/logo.svg",
+      "src": "./assets/logos/logo.svg",
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/assets/logos/logo.svg",
+      "src": "./assets/logos/logo.svg",
       "sizes": "192x192",
       "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/assets/logos/logo.svg",
+      "src": "./assets/logos/logo.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
