--- a/manifest.json
+++ b/manifest.json
@@ -14,15 +14,15 @@
       "purpose": "any maskable"
     },
     {
-      "src": "./assets/logos/logo.svg",
+      "src": "./assets/logos/klyx-logo.png",
       "sizes": "192x192",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./assets/logos/logo.svg",
+      "src": "./assets/logos/klyx-logo.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ]
